--- a/styles.css
+++ b/styles.css
@@ -13,26 +13,20 @@ body {
 .container {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     height: 100vh;
-    position: relative;
+    width: 100%;
 }
 
 .score {
     font-size: 24px;
     font-weight: bold;
-    margin-bottom: 20px;
-    z-index: 10;
-    position: absolute;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
 }
 
 canvas {
     background-color: #000;
-    border: 4px solid #00FF00;
+    border: 4px solid #226e93;
     display: block;
     z-index: 1;
 }
@@ -40,21 +34,15 @@ canvas {
 button {
     padding: 10px 20px;
     font-size: 16px;
-    margin-top: 20px;
     cursor: pointer;
 }
 
 #scoreSubmission {
     display: none; /* Hidden by default */
-    position: fixed; /* Fixed to viewport */
-    top: 50%; /* Center vertically */
-    left: 50%; /* Center horizontally */
-    transform: translate(-50%, -50%); /* Center the form */
     background-color: rgba(0, 0, 0, 0.8); /* Dark background */
     padding: 20px;
     border-radius: 10px;
     color: white;
-    z-index: 1000; /* Ensure it's on top of everything */
     width: 80%;
     max-width: 400px; /* Max width for better appearance */
 }
@@ -76,7 +64,7 @@ button {
 
 #submitScoreButton {
     padding: 10px 20px;
-    background-color: #00FF00;
+    background-color: #226e93;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -85,11 +73,10 @@ button {
 }
 
 #submitScoreButton:hover {
-    background-color: #33cc33;
+    background-color: #226e93;
 }
 
 #leaderboard {
-    margin-top: 20px;
     text-align: center;
 }
 
@@ -108,8 +95,10 @@ h1 {
 }
 
 .game-container {
+    width: 100%;
     flex-grow: 1;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    flex-direction: row;
 }
