--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,6 @@ canvas {
     background-color: #000;
     border: 4px solid #226e93;
     display: block;
-    margin-right: 20px; /* Space between canvas and leaderboard */
 }
 
 #leaderboard {
@@ -116,9 +115,24 @@ h1 {
 
 .game-container {
     width: 100%;
-    flex-grow: 1;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
+}
+
+.left-panel {
+    display: flex;
+    width: 200px;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.right-panel {
+    display: flex;
+    width: 200px;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
 }
